--- a/test.css
+++ b/test.css
@@ -1,1 +1,14 @@
+.character {
+    width: 200px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    display: inline-block;
+}
 
+.character img {
+    max-width: 100%;
+    height: auto;
+}
