--- a/test.css
+++ b/test.css
@@ -1,7 +1,7 @@
 /* Estilos base */
 .results {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 20px;
 }
 
@@ -18,31 +18,5 @@
 .character img {
     max-width: 100%;
     height: auto;
-    margin-bottom: 5px; /* Tamaño */
-}
-
-
-
-@media (max-width: 600px) {
-    .results {
-        grid-template-columns: repeat(1, 1fr); /* Cambia a una columna */
-    }
-}
-
-@media (min-width: 601px) and (max-width: 900px) {
-    .results {
-        grid-template-columns: repeat(2, 1fr); /* Cambia a dos columnas */
-    }
-}
-
-@media (min-width: 901px) and (max-width: 1200px) {
-    .results {
-        grid-template-columns: repeat(3, 1fr); /* Cambia a tres columnas */
-    }
-}
-
-@media (min-width: 1201px) {
-    .results {
-        grid-template-columns: repeat(5, 1fr); /* Mantiene cinco columnas */
-    }
+    margin-bottom: 5px;
 }
