--- a/test.css
+++ b/test.css
@@ -1,12 +1,12 @@
 /* Estilos base */
 .results {
     display: grid;
-    grid-template-columns: repeat(5, minmax(0, 1fr)); /* Establecer 5 columnas por defecto */
+    grid-template-columns: repeat(5, 1fr);
     gap: 20px;
 }
 
 .character {
-    width: 100%;
+    width: calc(100% - 1/3 * 20px); 
     border: 2px solid #ccc;
     border-radius: 5px;
     padding: 5px;
@@ -16,7 +16,7 @@
 }
 
 .character img {
-    max-width: 100%;
+    max-width: calc(100% - 20px); 
     height: auto;
     margin-bottom: 5px;
 }
