--- a/test.css
+++ b/test.css
@@ -20,3 +20,18 @@
     height: auto;
     margin-bottom: 5px;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Centra los elementos horizontalmente */
+}
+
+h1 {
+    margin-top: 20px; /* Añade espacio arriba del título */
+}
+
+#searchInput {
+    margin-top: 20px; /* Añade espacio arriba de la barra de búsqueda */
+}
+
