--- a/test.css
+++ b/test.css
@@ -24,14 +24,19 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centra los elementos horizontalmente */
+    align-items: center;
+    padding-bottom: 20px;
 }
 
 h1 {
-    margin-top: 20px; /* Añade espacio arriba del título */
+    margin-top: 20px;
 }
 
 #searchInput {
-    margin-top: 20px; /* Añade espacio arriba de la barra de búsqueda */
+    margin-top: 40px;
+    margin-bottom: 20px; 
 }
 
+button {
+    margin-top: 10px;
+}
