--- a/test.css
+++ b/test.css
@@ -1,4 +1,11 @@
 /* Estilos base */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .results {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -29,7 +36,7 @@ body {
 }
 
 h1 {
-    margin-top: 20px;
+    text-aling: center;
 }
 
 #searchInput {
