--- a/test.css
+++ b/test.css
@@ -39,13 +39,20 @@ h1 {
     margin-top: 20px;
 }
 
+.search-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 #searchInput {
-    margin-top: 40px;
-    margin-bottom: 20px; 
+    margin-right: 10px;
+    flex: 1;
 }
 
 button {
-    margin-top: 10px;
+    width: 100px;
 }
 
 .status {
@@ -53,7 +60,7 @@ button {
 }
 
 .status-alive {
-    color: #2ecc71; 
+    color: #2ecc71;
 }
 
 .status-dead {
@@ -61,5 +68,5 @@ button {
 }
 
 .status-unknown {
-    color: #95a5a6;
+    color: #95a5a6; 
 }
