--- a/test.css
+++ b/test.css
@@ -8,7 +8,7 @@
 h1 {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; /* Añadido margen inferior al título */
 }
 
 .search-container {
@@ -24,74 +24,17 @@ h1 {
 }
 
 button {
-    width: 30px;
-    height: 30px; 
+    width: 30px; /* Ancho cuadrado */
+    height: 30px; /* Altura cuadrada */
     border: none;
     background-color: transparent;
     cursor: pointer;
-    margin: 0 5px;
+    margin: 0 5px; /* Margen horizontal entre botones */
 }
 
 button:focus {
-    outline: none; 
+    outline: none; /* Eliminar contorno al hacer clic */
 }
 
 button:hover {
-    background-color: #f2f2f2;
-}
-
-.results {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-}
-
-.character {
-    width: calc(100% - 1/3 * 20px); 
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    padding: 5px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-}
-
-.character img {
-    max-width: calc(100% - 20px); 
-    height: auto;
-    margin-bottom: 5px;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 20px;
-}
-
-.status {
-    margin-top: 0;
-}
-
-.status-alive {
-    color: #2ecc71;
-}
-
-.status-dead {
-    color: #e74c3c; 
-}
-
-.status-unknown {
-    color: #95a5a6; 
-}
-
-.pagination {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.pagination button.active {
-    background-color: #333; 
-    color: #fff; 
-}
+    background-color: #f2f2f2; /* Cambiar color de fondo al pasar el
