--- a/test.css
+++ b/test.css
@@ -33,8 +33,8 @@ button {
 }
 
 button:focus {
-    outline: none; /* Eliminar contorno al hacer clic */
+    outline: none; 
 }
 
 button:hover {
-    background-color: #f2f2f2; /* Cambiar color de fondo al pasar el
+    background-color: #f2f2f2;
