--- a/style.css
+++ b/style.css
@@ -1,28 +1,40 @@
+/* Estilos base */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 h1 {
-  text-align: center;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 18px;
+.search-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.image-container {
-  display: flex;
+#searchInput {
+    margin-right: 10px;
+    flex: 1;
 }
 
-.image-container img {
-  width: 100%
+button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    margin: 0 5px;
 }
 
-article {
-  padding: 10px;
-  box-shadow: 0px 0px 1px #000;
+button:focus {
+    outline: none; 
 }
+
+button:hover {
+    background-color: #f2f2f2;
