--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilos base */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
 h1 {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
 }
 
 .search-container {
@@ -24,12 +24,12 @@ h1 {
 }
 
 button {
-    width: 30px;
-    height: 30px;
+    width: 30px; 
+    height: 30px; 
     border: none;
     background-color: transparent;
     cursor: pointer;
-    margin: 0 5px;
+    margin: 0 5px; 
 }
 
 button:focus {
@@ -37,4 +37,56 @@ button:focus {
 }
 
 button:hover {
-    background-color: #f2f2f2;
+    background-color: #f2f2f2; 
+}
+
+.results {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+}
+
+.character {
+    width: calc(100% - 1/3 * 20px); 
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.character img {
+    max-width: calc(100% - 20px); 
+    height: auto;
+    margin-bottom: 5px;
+}
+
+.status {
+    margin-top: 0;
+}
+
+.status-alive {
+    color: #2ecc71; 
+}
+
+.status-dead {
+    color: #e74c3c; 
+}
+
+.status-unknown {
+    color: #95a5a6; 
+}
+
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination button.active {
+    background-color: #333; 
+    color: #fff; 
+}
+
