--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ button:focus {
 
 button:hover {
     background-color: #f2f2f2; /* Cambiar color de fondo al pasar el ratón */
+    width: 40px; 
 }
 
 /* Estilos para los resultados */
