--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ h1 {
 }
 
 #searchInput {
-    width: 150px; /* Ancho más corto para la barra de búsqueda */
+    width: 100px; /* Ancho más pequeño para la barra de búsqueda */
     margin-right: 10px;
 }
 
 button {
-    width: 50px; /* Ancho cuadrado */
+    width: 30px; /* Ancho cuadrado */
     height: 30px; /* Altura cuadrada */
     border: none;
     background-color: transparent;
@@ -90,3 +90,4 @@ button:hover {
     background-color: #333; /* Color más oscuro para la página actual */
     color: #fff; /* Texto blanco para la página actual */
 }
+
