--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Estilos base */
 * {
-    margin: 10;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -98,7 +98,7 @@ button:hover {
     background-color: transparent;
     cursor: pointer;
     margin: 0 5px; /* Margen horizontal entre botones */
-    margin:
+    margin-bottom: 20px;
 }
 
 .pagination button:hover {
