--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body {
+    margin-bottom: 20px;
+}
+
 h1 {
     text-align: center;
     margin-top: 20px;
@@ -98,7 +102,6 @@ button:hover {
     background-color: transparent;
     cursor: pointer;
     margin: 0 5px; /* Margen horizontal entre botones */
-    margin-bottom: 20px;
 }
 
 .pagination button:hover {
