--- a/style.css
+++ b/style.css
@@ -96,15 +96,15 @@ button:hover {
 }
 
 .pagination button {
-    width: 30px; /* Ancho cuadrado */
-    height: 30px; /* Altura cuadrada */
+    width: 30px; 
+    height: 30px; 
     border: none;
     background-color: transparent;
     cursor: pointer;
-    margin: 0 5px; /* Margen horizontal entre botones */
+    margin: 0 5px; 
 }
 
 .pagination button:hover {
-    background-color: #f2f2f2; /* Cambiar color de fondo al pasar el ratón */
+    background-color: #f2f2f2; 
 }
 
