--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ button:hover {
     max-width: calc(100% - 20px); 
     height: auto;
     margin-bottom: 5px;
-    magic: auto;
+    margin: auto;
 }
 
 .status {
