--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* Estilos */
+
+.btn-primary {
+    width: 200px; 
+    display: block; 
+    margin: 0 auto; 
+}
+
 /* Estilos base */
 * {
     margin: 0;
