--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 .btn btn-primary {
     width: 250px; 
+    height: 50px;
     display: block; 
     margin: 0 auto;
     background-color: #007bff;
