--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px;
-    margin-bottom: 1rem;
+    margin-bottom: 20px;
 }
 
 .search-container {
